--- a/price3/client/assets/styles/index.less
+++ b/price3/client/assets/styles/index.less
@@ -108,32 +108,37 @@ body{
    background-color: #eee;
 }
 
-/*sidebar logo样式定义*/
-.components-layout-demo-side .logo {
-  height: 32px;
-  border-radius: 6px;
-  margin: 16px;
-  line-height: 32px;
-  font-size: 16px;
-  color: white ;
-  text-align: center ;
-}
-/*当sidebar折叠的时候图标字体变大*/
-.components-layout-demo-side .ant-layout-sider-collapsed .anticon {
-  font-size: 16px;
-  margin-left: 8px;
-}
-
-/*当sidebar折叠的时候不显示文字信息*/
-.components-layout-demo-side .ant-layout-sider-collapsed .nav-text {
-  display: none;
-}
-/*当sidebar折叠的时候不显示向右箭头*/
-.components-layout-demo-side .ant-layout-sider-collapsed .ant-menu-submenu-vertical > .ant-menu-submenu-title:after {
-  display: none;
-}
-.components-layout-demo-side .ant-layout-content{
-    background: #fff ;
+#components-layout-demo-side{
+    /*sidebar logo样式定义*/
+    .logo{
+        height: 32px;
+        border-radius: 6px;
+        margin: 16px;
+        line-height: 32px;
+        font-size: 16px;
+        color: white ;
+        text-align: center ;
+    }
+    .ant-layout-sider-collapsed{
+        /*当sidebar折叠的时候图标字体变大*/
+        .anticon{
+            font-size: 16px;
+            margin-left: 8px;
+        }
+        /*当sidebar折叠的时候不显示文字信息*/
+        .nav-text{
+            display: none;
+        }
+        /*当sidebar折叠的时候不显示向右箭头*/
+        .ant-menu-submenu-vertical {
+            .ant-menu-submenu-title:after{
+                display: none;
+            }
+        }
+    }
+    .ant-layout-content{
+        background: #fff ;
+    }
 }
 .float-right{
     float: right ;
