--- a/price4/client/assets/styles/index.less
+++ b/price4/client/assets/styles/index.less
@@ -1,4 +1,5 @@
 @import './category.less' ;
+@import './login.less' ;
 body{
     min-width: 1100px;
     font-family :Arial, Helvetica, Sans-Serif;
@@ -118,6 +119,7 @@ body{
         font-size: 16px;
         color: white ;
         text-align: center ;
+        cursor: pointer ;
     }
     .ant-layout-sider-collapsed{
         /*当sidebar折叠的时候图标字体变大*/
