--- a/price4/client/assets/styles/login.less
+++ b/price4/client/assets/styles/login.less
@@ -3,8 +3,8 @@
   width: 100%;
   height: 100%;
   //background-image: url('../img/bg1.jpg');
-  background-repeat: no-repeat;
-  background-size:100% 100%;
+  //background-repeat: no-repeat;
+  //background-size:100% 100%;
   .container {
       position: relative;
       top: 25%;
@@ -65,8 +65,6 @@
         outline-color: #dceefc;
         outline-offset: 0;
       }
-
-      
 
       .lt-ie9 .input[type=text], .lt-ie9 input[type=password] {
         line-height: 34px;
